--- a/Exam1/Aguaiza/code/Productos/nbproject/project.properties
+++ b/Exam1/Aguaiza/code/Productos/nbproject/project.properties
@@ -44,8 +44,8 @@ j2ee.server.type=pfv3ee6
 jar.compress=false
 javac.classpath=\
     ${libs.Payara Server JAX-RS.classpath}:\
-    ${libs.javaee-web-api-7.0.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.28-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.28-bin.jar}:\
+    ${libs.javaee-web-api-7.0.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
